# SHE_PPT

./: .cproject  .gitignore  .gitlab-ci.yml  .jenkinsFile  .project  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README  README.md  README.old  sonar-project.properties
SHE_PPT/: CMakeLists.txt
SHE_PPT/auxdir/SHE_PPT/: EUC_MDB_MISSIONCONFIGURATION-SC3_2017-06-01T121200.00Z_01.01.xml  sample_analysis_config.xml  sample_bfd_calibration.xml  sample_bfd_training.xml  sample_calibrated_frame.xml  sample_calibration_config.xml  sample_common_calibration.xml  sample_expected_shear_validation_statistics.xml  sample_exposure_reprojected_segmentation_map.xml  sample_final_euclidized_hst_images.xml  sample_galaxy_population_priors.xml  sample_intermediate_catalog.xml  sample_intermediate_euclidized_hst_images.xml  sample_intermediate_general.xml  sample_intermediate_observation_catalog.xml  sample_intermediate_tile_catalog.xml  sample_ksb_calibration.xml  sample_ksb_training.xml  sample_lensmc_calibration.xml  sample_lensmc_chains.xml  sample_lensmc_training.xml  sample_mdb.xml  sample_mer_catalog.xml  sample_mer_final_catalog.xml  sample_mer_segmentation_map.xml  sample_momentsml_calibration.xml  sample_momentsml_training.xml  sample_momentsml_training_config.xml  sample_object_id_list.xml  sample_phz_pf_output_catalog.xml  (+31 more)
SHE_PPT/scripts/: convert_mer_final_xml.py  convert_psf_field_param.py  convert_psf_image.py  convert_segm_image.py  convert_sim_catalog.py  create_psf_image.py  create_segm_xml.py  make_prods.py  test_fov_calcs.py  test_reading_sc3.py
(+374 files in other folders)
